# Pitchblade

./: .gitignore  CMakeLists.txt  Pitchblade.jucer  README.md  cmake_install.cmake  configure_linux.sh  configure_windows.bat  configure_windows.sh  configure_windows_release.bat  configure_windows_test.bat  installer.nsi
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
plugin/Pitchblade_artefacts/JuceLibraryCode/: Info.txt
plugin/Pitchblade_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
plugin/assets/: tooltips.txt
plugin/include/Pitchblade/: FormantDetector.h  GainProcessor.h  NoiseGateProcessor.h  PitchDetector.h  PluginEditor.h  PluginProcessor.h
plugin/include/Pitchblade/effects/: CompressorProcessor.h  DeEsserProcessor.h  DeNoiserProcessor.h  Equalizer.h  FormantDetector.h  FormantShifter.h  GainProcessor.h  NoiseGateProcessor.h  PitchCorrector.h  PitchDetector.h  PitchShifter.h
plugin/include/Pitchblade/panels/: CompressorPanel.h  DeEsserPanel.h  DeNoiserPanel.h  EffectNode.h  EqualizerPanel.h  FormantPanel.h  GainPanel.h  NoiseGatePanel.h  PitchPanel.h  PresetsPanel.h  SettingsPanel.h
plugin/include/Pitchblade/ui/: ColorPalette.h  CustomLookAndFeel.h  DaisyChain.h  DaisyChainItem.h  EffectPanel.h  EffectRegistry.h  EqualizerVisualizer.h  FormantVisualizer.h  FrequencyGraphVisualizer.h  LevelMeter.h  RealTimeGraphVisualizer.h  TooltipManager.h  TopBar.h  VisualizerPanel.h
plugin/plugin/Pitchblade_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h  Pitchblade_resources.rc
plugin/plugin/Pitchblade_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
plugin/plugin/juce_binarydata_BinaryData/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  input_file_list
plugin/source/: FormantDetector.cpp  GainProcessor.cpp  NoiseGateProcessor.cpp  PitchDetector.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/source/effects/: CompressorProcessor.cpp  DeEsserProcessor.cpp  DeNoiserProcessor.cpp  Equalizer.cpp  FormantDetector.cpp  FormantShifter.cpp  GainProcessor.cpp  NoiseGateProcessor.cpp  PitchCorrector.cpp  PitchDetector.cpp  PitchShifter.cpp
plugin/source/panels/: CompressorPanel.cpp  DeEsserPanel.cpp  DeNoiserPanel.cpp  EqualizerPanel.cpp  FormantPanel.cpp  GainPanel.cpp  NoiseGatePanel.cpp  PitchPanel.cpp  PresetsPanel.cpp  SettingsPanel.cpp
plugin/source/ui/: DaisyChain.cpp  EffectPanel.cpp  EqualizerVisualizer.cpp  FormantVisualizer.cpp  FrequencyGraphVisualizer.cpp  LevelMeter.cpp  RealTimeGraphVisualizer.cpp  TopBar.cpp  VisualizerPanel.cpp
tests/: CMakeLists.txt  mocks.cpp  test_CompressorProcessor.cpp  test_DeEsserProcessor.cpp  test_DeNoiserProcessor.cpp  test_Equalizer.cpp  test_FormantDetector.cpp  test_FormantShifter.cpp  test_GainProcessor.cpp  test_Integration_Amplitude.cpp  test_Integration_Equalizer.cpp  test_Integration_Formant.cpp  test_Integration_Performance.cpp  test_Integration_PitchCorrector.cpp  test_Integration_VisualizerPanel.cpp  test_NoiseGateProcessor.cpp  test_PitchCorrector.cpp  test_PitchDetector.cpp  test_UI_Daisychain.cpp  test_main.cpp
